--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ button {
 }
 
 button:hover {
-    background-color: #87CEEB;
+    background-color: #539bb7;
 }
 
 /* Select Dropdown Styles */
@@ -113,26 +113,8 @@ select:focus {
 }
 
 #songResult a:hover {
-    background-color: #388e3c; /* Slightly different color for the link */
+    background-color: #539bb7; /* Slightly different color for the link */
 }
-
-.new-option-button {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #ff5722;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 16px;
-    text-align: center;
-    cursor: pointer;
-}
-
-.new-option-button:hover {
-    background-color: #e64a19;
-}
-
 
 @media (max-width: 600px) {
     body {
