--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* General Reset */
 * {
     margin: 0;
     padding: 0;
@@ -27,19 +26,18 @@ header {
 
 header h1 {
     font-size: 28px;
-    color: #fff; /* Fixed color */
+    color: #fff;
 }
 
 header p {
     margin-top: 10px;
     font-size: 14px;
-    color: #fff; /* Fixed color */
+    color: #fff;
 }
 
-/* General button styles */
 button {
     display: inline-block;
-    width: 90%;  /* Same width for all buttons */
+    width: 90%;
     padding: 15px;
     background-color: #87CEEB;
     color: rgb(97, 90, 90);
@@ -48,19 +46,18 @@ button {
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-left: auto; /* Add automatic left margin */
-    margin-right: auto; /* Add automatic right margin */
-    margin-top: 15px; /* Optional: adds top margin for spacing between buttons */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
 }
 
 button:hover {
     background-color: #539bb7;
 }
 
-/* Select Dropdown Styles */
 select {
     display: block;
-    width: calc(90% - 40px); /* 90% width minus 40px for the 20px margins on both sides */
+    width: calc(90% - 40px);
     padding: 10px;
     margin: 15px auto;
     border: 2px solid #87CEEB;
@@ -96,10 +93,9 @@ select:focus {
     margin-bottom: 15px;
 }
 
-/* Play Now Button */
 #songResult a {
     display: inline-block;
-    width: 90%; /* Ensure consistency */
+    width: 90%;
     padding: 15px;
     background-color: #87CEEB;
     color: rgb(97, 90, 90);
@@ -113,7 +109,7 @@ select:focus {
 }
 
 #songResult a:hover {
-    background-color: #539bb7; /* Slightly different color for the link */
+    background-color: #539bb7;
 }
 
 @media (max-width: 600px) {
@@ -143,7 +139,6 @@ select:focus {
         padding: 8px;
     }
 
-    /* Adjust Play Now button on small screens */
     #songResult a {
         font-size: 16px;
         padding: 12px;
