edit image placement

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     width: 454px;
     height: 605px;
     border-radius: 8px;
-    margin-bottom: 20px;
+    margin: 25px;
 }
 
 /* Header styles */
