--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,11 @@
-/* Import Poppins font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
-/* Reset margin and padding for all elements */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Set the Poppins font as the default */
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #000;
@@ -18,7 +15,6 @@ body {
     margin: 0;
 }
 
-/* Container for centering and max-width */
 .container {
     max-width: 600px;
     margin: 0 auto;
@@ -33,34 +29,31 @@ body {
     margin: 30px;
 }
 
-/* Header styles */
 header {
     margin-bottom: 20px;
 }
 
-/* Titles (h1 and h2) should have a bolder weight */
 section h1 {
     font-size: 55px;
     color: #fff;
-    font-weight: 700;  /* Bold weight for titles */
+    font-weight: 700;
 }
 
 section p {
     margin: 50px;
     font-size: 18px;
     color: #fff;
-    font-weight: 400;  /* Regular weight for paragraph text */
+    font-weight: 400;
 }
 
 section h2 {
     margin: 20px;
     font-size: 15px;
     color: #fff;
-    font-weight: 600;  /* Semi-bold for h2 */
+    font-weight: 600;
     text-decoration: underline;
 }
 
-/* Button styles */
 button {
     display: inline-block;
     width: 90%;
@@ -68,7 +61,7 @@ button {
     background-color: #87CEEB;
     color: rgb(97, 90, 90);
     font-size: 18px;
-    font-weight: 600;  /* Semi-bold weight for button text */
+    font-weight: 600;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -82,7 +75,6 @@ button:hover {
     background-color: #539bb7;
 }
 
-/* Styles for the select dropdown */
 select {
     display: block;
     width: calc(90% - 40px);
@@ -93,7 +85,7 @@ select {
     font-size: 16px;
     color: #333;
     background-color: #fff;
-    font-weight: 400;  /* Regular weight for select */
+    font-weight: 400;
 }
 
 select:focus {
@@ -101,7 +93,6 @@ select:focus {
     border-color: #87CEEB;
 }
 
-/* Song result section styles */
 #songResult {
     margin-top: 30px;
 }
@@ -116,13 +107,13 @@ select:focus {
 #songResult h2 {
     font-size: 20px;
     margin-bottom: 10px;
-    font-weight: 600;  /* Semi-bold for h2 in song results */
+    font-weight: 600;
 }
 
 #songResult p {
     font-size: 18px;
     margin-bottom: 15px;
-    font-weight: 400;  /* Regular weight for song description */
+    font-weight: 400;
 }
 
 #songResult a {
@@ -138,14 +129,13 @@ select:focus {
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
-    font-weight: 600;  /* Semi-bold for link button */
+    font-weight: 600;
 }
 
 #songResult a:hover {
     background-color: #539bb7;
 }
 
-/* Media query for smaller screens */
 @media (max-width: 600px) {
     body {
         padding: 10px;
